--- a/Appendix01_Lambda/.project
+++ b/Appendix01_Lambda/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Apperndix01_Lambda</name>
+	<name>Appendix01_Lambda</name>
 	<comment></comment>
 	<projects>
 	</projects>
